# piston

./: .gitignore  CITATION.cff  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt
.cargo/: config.toml
crates/piston-core/: Cargo.toml
crates/piston-core/src/: autocast.rs  backprop.rs  compiled_op.rs  device.rs  dispatch.rs  enforcer.rs  executable.rs  indexer.rs  lib.rs  op.rs  parameter.rs  plot.rs  quant.rs  scope.rs  shape.rs  stride.rs  tensor.rs  tensor_id.rs  test_utils.rs
crates/piston-core/src/cpu/: binary.rs  gemm.rs  mod.rs  norm.rs  reindex.rs  rope.rs  softmax.rs  unary.rs  utils.rs
crates/piston-core/src/dispatch/: dispatch_mode.rs  mod.rs
crates/piston-core/src/dtype/: blocks.rs  mod.rs
crates/piston-core/src/gpu/: align.rs  device.rs  logging.rs  mod.rs  profiler.rs  profiler_context.rs  trace.rs  uniform.rs  workload.rs
crates/piston-core/src/gpu/buffer_allocator/: allocator.rs  lazy_graph_executor.rs  mod.rs
crates/piston-core/src/gpu/fusion/: analysis.rs  codegen.rs  graph.rs  group.rs  mod.rs  pattern.rs
crates/piston-core/src/gpu/pools/: bind_group_layout_pool.rs  bind_group_pool.rs  buffer_pool.rs  dynamic_resource_pool.rs  kernel_module_pool.rs  pipeline_layout_pool.rs  pipeline_pool.rs  static_resource_pool.rs
crates/piston-core/src/gpu/wgsl/: dtype.rs  kernel.rs  kernel_builder.rs  mod.rs
crates/piston-core/src/ops/: affine.rs  alibi.rs  arange.rs  bernoulli.rs  binary.rs  cache.rs  cast.rs  cmp.rs  concat.rs  conv.rs  eye.rs  fill_constant.rs  fill_pointwise.rs  fill_randn.rs  gather.rs  index_add.rs  index_write.rs  lerp.rs  mod.rs  multinomial.rs  one_hot.rs  powf.rs  reduce.rs  rope.rs  scatter_add.rs  select.rs  softmax.rs  ternary.rs  topk.rs  trilu.rs  unary.rs  view.rs  where_cond.rs
crates/piston-core/src/ops/matmul/: gemm.rs  mod.rs  quantized.rs  subgroup_gemv.rs  workgroup_gemv.rs
crates/piston-core/src/ops/norm/: groupnorm.rs  mod.rs
crates/piston-core/src/ops/reindex/: flip.rs  (+4 more)
crates/piston-core/src/storage/: cpu_buffer.rs  gpu_buffer.rs
crates/piston-core/tests/: attn_tests.rs  caching.rs
crates/piston-datasets/: Cargo.toml
crates/piston-datasets/src/: batcher.rs  lib.rs
crates/piston-datasets/src/nlp/: tinystories.rs
crates/piston-macros/: Cargo.toml
crates/piston-macros/src/: ir_fields.rs  js_tensor.rs  js_tensor_web_op.rs  lib.rs  ops.rs  scoped_module.rs  wgsl_metadata.rs
crates/piston-models/: Cargo.toml
crates/piston-models/src/: lib.rs
crates/piston-models/src/gpt2/: attn.rs  embedding.rs  generate.rs  linear.rs  mlp.rs  mod.rs  model.rs
crates/piston-nn/: Cargo.toml
crates/piston-nn/src/: activation.rs  alibi.rs  dropout.rs  embedding.rs  groupnorm.rs  init.rs  kv_cache.rs  lib.rs  linear.rs  loss.rs  lr_scheduler.rs  norm.rs  optim.rs  rope.rs  sinusoidal.rs  training_context.rs  util.rs  var_builder.rs  var_map.rs
crates/piston-nn/tests/: optim.rs
crates/piston-web/: Cargo.toml  LICENSE  README.md  cast.js  package.json
crates/piston-web/src/: device.rs  dtype.rs  error.rs  function.rs  js_util.rs  lib.rs  model.rs  profiler.rs  serialization.rs  shape.rs  tensor.rs  test_utils.rs  trace.rs
crates/ratchet-cli/: Cargo.toml
crates/ratchet-core/: Cargo.toml
crates/ratchet-core/src/: backprop.rs  compiled_op.rs  device.rs  enforcer.rs  executable.rs  lib.rs  op.rs  parameter.rs  plot.rs  quant.rs  shape.rs  stride.rs  tensor.rs  tensor_id.rs  test_utils.rs  variable.rs
crates/ratchet-core/src/cpu/: binary.rs  gemm.rs  mod.rs  norm.rs  reindex.rs  rope.rs  softmax.rs  unary.rs
crates/ratchet-core/src/dtype/: blocks.rs  mod.rs
crates/ratchet-core/src/gpu/: align.rs  device.rs  logging.rs  profiler.rs  uniform.rs
crates/ratchet-core/src/ops/: affine.rs  alibi.rs  arange.rs  bernoulli.rs  binary.rs  cache.rs  cast.rs  cmp.rs  concat.rs  conv.rs  fill_constant.rs  fill_randn.rs  gather.rs  index_add.rs  index_write.rs  mod.rs  powf.rs  reduce.rs  rope.rs  scatter_add.rs  select.rs  softmax.rs  trilu.rs  unary.rs  view.rs  where_cond.rs
crates/ratchet-core/src/storage/: cpu_buffer.rs  gpu_buffer.rs  mod.rs
crates/ratchet-core/tests/: attn_tests.rs
crates/ratchet-datasets/: Cargo.toml
crates/ratchet-datasets/src/: batcher.rs  lib.rs
crates/ratchet-datasets/src/nlp/: mod.rs  tinystories.rs  toy.rs
crates/ratchet-loader/: Cargo.toml
crates/ratchet-macros/: Cargo.toml
crates/ratchet-macros/src/: ir_fields.rs  lib.rs  scoped_module.rs
crates/ratchet-models/: Cargo.toml
crates/ratchet-models/src/: lib.rs  registry.rs
crates/ratchet-models/src/gpt2/: attn.rs  generate.rs  linear.rs  mlp.rs  mod.rs  model.rs
crates/ratchet-models/src/phi2/: attn.rs
crates/ratchet-models/src/phi3/: attn.rs  mlp.rs
crates/ratchet-nn/: Cargo.toml
crates/ratchet-nn/src/: activation.rs  alibi.rs  dropout.rs  embedding.rs  groupnorm.rs  init.rs  kv_cache.rs  lib.rs  linear.rs  loss.rs  lr_scheduler.rs  norm.rs  optim.rs  rope.rs  sinusoidal.rs  training_context.rs  util.rs  var_builder.rs  var_map.rs
crates/ratchet-nn/tests/: optim.rs
crates/ratchet-web-train/: Cargo.toml  README.md
crates/ratchet-web-train/src/: lib.rs  model.rs  test_ops.rs  test_utils.rs
crates/ratchet-web/src/: model.rs
examples/finetuning/: .prettierrc  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts  vitest-setup-client.ts
examples/finetuning/src/lib/: dataUtils.ts
examples/finetuning/static/: _headers
examples/piston-train-toy/: .env.development  .env.production  .gitignore  .npmrc  .prettierrc  README.md  eslint.config.js  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
examples/piston-train-toy/src/: app.css  app.d.ts  app.html
examples/piston-train-toy/src/lib/: trainWorker.ts
examples/piston-train-toy/src/routes/: +layout.svelte  +page.svelte
examples/ratchet-train-toy/: README.md  package.json  vite.config.ts
examples/ratchet-train-toy/src/: tasks.ts  trainWorker.ts
examples/ratchet-train-toy/src/lib/: tasks.ts  trainWorker.ts
examples/ratchet-train-toy/src/routes/: +page.svelte
(+165 files in other folders)
