[package]
name = "piston-macros"
version = "0.1.0"
keywords = []
edition = "2021"
readme.workspace = true
repository = "https://github.com/vinhowe/piston"

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0" }
heck = { version = "0.5.0" }
