[package]
name = "piston-models"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
default = ["pyo3"]
ci = []
pyo3 = []
plotting = ["piston/plotting"]
debug = ["piston-nn/debug", "piston/debug"]

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true 

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

[dependencies]
piston = { path = "../piston-core" }
piston-nn = { path = "../piston-nn" }
piston-datasets = { path = "../piston-datasets" }
piston-macros = { path = "../piston-macros" }
anyhow.workspace = true
thiserror.workspace = true
derive-new = { workspace = true }
log.workspace = true
ndarray-stats = { workspace = true }
ndarray = { workspace = true }
tokenizers = { version = "0.19.1", default-features = false, features=["unstable_wasm"] }
clap = { workspace = true, features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }  
serde-wasm-bindgen = "0.4.5"
tsify = "0.4.5"
js-sys = { workspace = true } 
maybe-async = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
piston = { path = "../piston-core", features = ["pyo3"] }
maybe-async = { workspace = true, features = ["is_sync"] }
hf-hub.workspace = true

[dev-dependencies]
piston = { path = "../piston-core" }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
npyz = { workspace = true }
hound = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
piston = { path = "../piston-core", features = ["pyo3"] }
pyo3 = { workspace = true }
numpy = { workspace = true }

