[package]
name = "piston-web"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vinhowe/piston"

[features]
debug = ["piston-nn/debug"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  '-O4',
  '--enable-simd',
  '--flexible-inline-max-function-size',
  '4294967295',
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
piston-models = { path = "../piston-models" }
piston-nn = { path = "../piston-nn" }
piston-datasets = { path = "../piston-datasets" }
piston-macros = { path = "../piston-macros" }
piston = { path = "../piston-core" }
half = { workspace = true }
wgpu = { workspace = true }
wasm-bindgen = { workspace = true }
safetensors = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log.workspace = true
chrono = { workspace = true }
fern = { workspace = true }
tokenizers = { version = "0.19.1", default-features = false, features = [
  "unstable_wasm",
] }
futures = "0.3.30"
async-trait = { workspace = true }
paste = { workspace = true }
[dependencies.web-sys]
features = ['console', 'Window', 'Navigator']
workspace = true


[dev-dependencies]
wasm-bindgen-test.workspace = true
serde_json = { workspace = true }
ndarray = { workspace = true }
