[package]
name = "ratchet-datasets"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A web-first, cross-platform ML framework."
keywords = [
    "llm",
    "wasm",
    "transformers",
    "webgpu",
    "ml",
    "machine-learning",
    "deep-learning",
]
repository = "https://github.com/FL33TW00D/ratchet"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ratchet = { path = "../ratchet-core" }
log.workspace = true
tokenizers = { version = "0.19.1", default-features = false, features = [
    "unstable_wasm",
] }
anyhow.workspace = true
memmap2.workspace = true
rand.workspace = true
byteorder.workspace = true
