[package]
name = "ratchet-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pyo3 = ["ratchet/pyo3"]
plotting = ["ratchet/plotting"]
debug = ["ratchet/debug"]

[dependencies]
anyhow.workspace = true
log.workspace = true
derive-new = { workspace = true }
half = { workspace = true }
ratchet = { path = "../ratchet-core" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen-test = { workspace = true }
safetensors = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
maybe-async = { workspace = true, features = ["is_sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
maybe-async = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-strategy = { workspace = true }
# hf-hub = { workspace = true }
ratchet-loader = { path = "../ratchet-loader" }
tokenizers = { version = "0.19.1", default-features = false, features = [
    "unstable_wasm",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
features = [
    "Blob",
    "HtmlAnchorElement",
    "CssStyleDeclaration"
]
workspace = true
